// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "canFetch": true,
  "list": Array [],
}
`;

exports[`2- fetchAct 1`] = `
Object {
  "canFetch": false,
  "list": Array [],
}
`;

exports[`3- fetchedAct 1`] = `
Object {
  "canFetch": false,
  "list": Array [
    Object {
      "author": "foo",
      "permlink": "bar",
    },
    Object {
      "author": "baz",
      "permlink": "gaz",
    },
  ],
}
`;

exports[`4- addAct 1`] = `
Object {
  "canFetch": false,
  "list": Array [
    Object {
      "author": "foo",
      "permlink": "bar",
    },
    Object {
      "author": "baz",
      "permlink": "gaz",
    },
    Object {
      "author": "lorem",
      "permlink": "ipsum",
    },
  ],
}
`;

exports[`5- deleteAct 1`] = `
Object {
  "canFetch": false,
  "list": Array [
    Object {
      "author": "foo",
      "permlink": "bar",
    },
    Object {
      "author": "lorem",
      "permlink": "ipsum",
    },
  ],
}
`;
